--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -14,6 +14,11 @@
   justify-content: center;
 }
 
+@mixin flex-baseline {
+  display: flex;
+  align-items: baseline;
+}
+
 @mixin flex-between {
   display: flex;
   align-items: center;
@@ -42,12 +47,9 @@
   text-overflow: ellipsis;
 }
 
-@mixin mx-0 {
-  margin-left: 0 !important;
-  margin-right: 0 !important;
+@mixin cubic-bezier {
+  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
 }
-
-@mixin px-0 {
-  padding-left: 0 !important;
-  padding-right: 0 !important;
+@mixin code-font {
+  font-family: 'jetbrains mono', 'fira code', 'source code pro', consolas, monospace;
 }
