--- a/src/components/image-radio/style.module.scss
+++ b/src/components/image-radio/style.module.scss
@@ -1,9 +1,11 @@
+@use '@/styles/mixins.scss' as *;
+
 .group {
   @apply flex gap-2 flex-grow-0 flex-shrink-0;
 }
 
 .radio {
-  @apply flex rounded-md p-2 w-1/3 items-start gap-2 cursor-pointer;
+  @apply flex rounded-md p-2 w-1/3 items-start gap-2 cursor-pointer relative overflow-hidden;
   border: 1px solid var(--colorBorder);
 
   .desc {
@@ -15,7 +17,22 @@
     line-height: 0;
   }
 
+  .check {
+    @apply absolute top-0 right-0 flex items-center justify-center rounded-bl-full h-6 w-6 pl-1 pb-1;
+    background-color: var(--colorPrimaryText);
+    color: white;
+    transform-origin: right top;
+    transform: scale(0.8);
+    opacity: 0;
+    transition: all .2s;
+    @include cubic-bezier;
+  }
+
   &.selected {
     border-color: var(--colorPrimaryText);
+    .check {
+      transform: scale(1);
+      opacity: 1;
+    }
   }
 }
