--- a/src/pages/dashboard/style/index.module.scss
+++ b/src/pages/dashboard/style/index.module.scss
@@ -1,36 +1,11 @@
 @use '@/styles/mixins.scss' as *;
 
-.user-section {
-  @include flex-between;
-  background-color: var(--colorBgContainer);
-  border-bottom: 1px solid var(--colorBorderSecondary);
-  padding: 24px 40px;
+.shadow {
+  box-shadow: 0 1px 2px -2px rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.12), 0 5px 12px 4px rgba(0, 0, 0, 0.09)
 }
 
-.user-info {
-  @include flex-center-v;
-  gap: 16px;
-  $size: 64px;
-  img {
-    height: $size;
-    width: $size;
-    border-radius: 50%;
-  }
-}
-
-.name {
-  font-size: 24px;
-  font-weight: bold;
-}
-.job-title {
-  color: var(--colorTextSecondary);
-}
-
-.statistics {
-  @include flex-center-v;
-  gap: 16px;
-}
-
-.divider {
-  border-left: 1px solid var(--colorBorder);
+.inner {
+  @apply rounded-md;
+  @include cubic-bezier;
+  transition: box-shadow .2s;
 }
